@@ -63,8 +63,8 @@ if [ "$CI_BUILD_STAGE_NAME" = "build" ]; then
     sudo apt-get install ccache help2man libfl-dev
     if [ "$CI_RUNS_ON" != "ubuntu-22.04" ]; then
       # Some conflict of libunwind verison on 22.04, can live without it for now
-      sudo apt-get install libgoogle-perftools-dev ||
-      sudo apt-get install libgoogle-perftools-dev
+      sudo apt-get install libgoogle-perftools-dev mold ||
+      sudo apt-get install libgoogle-perftools-dev mold
     fi
     if [ "$CI_RUNS_ON" = "ubuntu-20.04" ] || [ "$CI_RUNS_ON" = "ubuntu-22.04" ]; then
       sudo apt-get install libsystemc libsystemc-dev ||
